Fix : scrollbar horizontale en mode iphone

--- a/src/app/shared/layout/card.scss
+++ b/src/app/shared/layout/card.scss
@@ -16,9 +16,8 @@
 }
 
 .mat-card-image {
-  height: 31.25rem;
-  width: 22.85rem;
-  margin: auto;
+  max-height: 31.25rem;
+  padding: 1rem;
 }
 
 .official-img {
